// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders default h1 1`] = `
.c0 {
  font-size: 16px;
  line-height: 26px;
  font-family: GTCinetype-Regular;
  margin-bottom: 12px;
}

<p
  className="c0"
>
  Title
</p>
`;

exports[`Text renders h1 with custom color 1`] = `
.c0 {
  font-size: 16px;
  line-height: 26px;
  font-family: GTCinetype-Regular;
  margin-bottom: 12px;
  color: green;
}

<p
  className="c0"
  color="green"
>
  Title
</p>
`;
